--- a/scripts/cleaning_plant_data.Rmd
+++ b/scripts/cleaning_plant_data.Rmd
@@ -10,9 +10,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
-library(googledrive)
 library(here)
-library(data.table)
 library(tidyverse)
 library(readxl)
 library(janitor)
@@ -33,6 +31,7 @@ raw_data_path <- here::here("raw_data")
 # Count files inside the raw_data folder to make sure the number of files downloaded is what is expected.
 length(list.files(raw_data_path, pattern = "plants"))
 
+## in this case there should be **4** files
 ```
 
 
@@ -40,7 +39,7 @@ length(list.files(raw_data_path, pattern = "plants"))
 ```{r}
 
 ## List with all xls files
-all_xls <- tibble(list.files(raw_data_path, pattern = c("xls", "xlsx"))) %>% 
+all_xls <- tibble(list.files(raw_data_path, pattern = "plants")) %>% #c("xls", "xlsx")
   rename(file_name = 1) %>% 
   mutate(path = paste0(raw_data_path, "/", file_name),
          n = 1:n(),
@@ -53,14 +52,14 @@ all_xls <- tibble(list.files(raw_data_path, pattern = c("xls", "xlsx"))) %>%
 **Initial Scan**
 - There are 4 files for this project. One for each of the years 2010, 2011, 2012 and one compile dataset with data from 2009 to 2012.
 
-- Dataset for 2011 has onformation for one plant only
+- Data for 2011 has information for only one plant
 
 - Data for 2010 and 2012: is duplicate (with maybe extra) of 2010-2012 plant datasheet 
 
 
 **Next Steps**
 1. Read and clean compile data (2009 to 2010)
-2. Identify how similar is the compile data with the dataset for each spcidic year
+2. Identify how similar is the compile data with the datasets for each spcific year
 
 
 ## Read data
@@ -76,9 +75,28 @@ Compile file
 excel_sheets(all_xls$path[1])
 
 plant_compile <- read_excel(all_xls$path[1], sheet = "Sheet1") %>% 
-  clean_names()
+  clean_names() %>% 
+  rename(species_code = species_1,
+         species = species_12,
+         amp_n = amp_v_5,
+         amp_c = amp_v_6)
 
 ```
+
+Initial explorations
+```{r}
+str(plant_compile)
+unique(plant_compile$date)
+
+# Check data NAs
+filter(plant_compile, is.na(date))
+
+# How many observations by year?
+plant_compile %>% 
+  group_by(date) %>% 
+  tally()
+```
+
 
 
 Data per year
@@ -86,28 +104,85 @@ Data per year
 - The 2011 data has one entry and columns not necessarily matches the compile dataset. Therefore we are not going to incorporate this data into the "clean data" outcome of this project. We are not sure what is the correct way to include this data. Please see 2011_Palmyra_Plant_Isotop.xlsx in [Miller-ter Kuile's Github account](https://github.com/anamtk/palmyra/tree/main/raw_data/isotope_data/plants) if you need the data on this one plant.
 
 
-_2010_
 ```{r}
+
+# 2010
 ## check sheet names
 excel_sheets(all_xls$path[2])
 
 plant_2010 <- read_excel(all_xls$path[2], sheet = "Sheet1") %>% 
-  clean_names()
+  clean_names() %>% 
+  rename(species_code = id_number_1,
+         island_name = id_number_2)
 ## Actually has data for 2011
 
+# 2011
+excel_sheets(all_xls$path[3])
+
+plant_11 <- read_excel(all_xls$path[3], sheet = "Sheet1") %>% 
+  clean_names()
 
 ## check sheet names
 excel_sheets(all_xls$path[4])
 
 plant_2012 <- read_excel(all_xls$path[4], sheet = "Sheet1", skip = 4) %>% 
-  clean_names()
+  clean_names() %>% 
+  rename(species_code = id_number_2,
+         island_name = id_number_1)
 ## this has data from 2012
 
 ```
 
 
-It does not seem that data sets are the same!
-Need to keep looking into detail what is the best way to organize this data!
+Exploring each of the data sets 
+```{r}
+colnames(plant_2010)
+colnames(plant_11)
+colnames(plant_2012)
+
+```
+
+**Notes**
+- plant_2010 under data column there are only 2011 dates.
+- plant_11 has one entry and date is on 2012
+- All the columns names for these three data set match
+
+## Combining yearly data
+
+```{r}
+
+  plant_all_yrs <- plant_11 %>% 
+  rename(date = id_number_1_1,
+         species_code = id_number_1_2,
+         island_name = id_number_2) %>% 
+  bind_rows(plant_2010, plant_2012) %>% 
+  filter(d15n != "Air") %>% 
+  rename(species = x14,
+         amp_n = amp_v_6,
+         amp_c = amp_v_7 ) %>% 
+  select(-id_number_3, -run) %>% 
+  mutate_at(vars(amp_n, amp_c, d15n, d13c, c_n), as.numeric)
+
+```
+
+## Compare bothe data sets
+
+The compile against the all years
+
+Both have the same measurements. The big question is: is the compile a subset of the all_yrs data?
+
+
+Apparently compile is not only a subset! it has more the is not in th all years.
+```{r}
+
+
+
+```
+
+
+
+
+
 
 
 
